done screen settting

--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -1,2 +1,14 @@
 {
+    "educationIsFree" : "education is free",
+    "Settings":"Settings",
+    "CustomizeChatUI":"Customize Chat UI",
+    "Language":"Language",
+    "Speedvoice":"Speed voice",
+    "Logout":"Logout",
+    "Dark":"Dark",
+    "Light":"Light",
+    "System":"System",
+    "":""
+
+    
 }
