--- a/src/assets/languages/vi.json
+++ b/src/assets/languages/vi.json
@@ -5,9 +5,9 @@
     "Logout":"Đăng xuất",
     "Settings":"Cài đặt",
     "Speedvoice":"Tốc độ",
-    "Dark":"Tối",
-    "Light":"Sáng",
-    "System":"Hệ thống",
+    "dark":"Tối",
+    "light":"Sáng",
+    "system":"Hệ thống",
     "":""
     
 }
