--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -1,10 +1,10 @@
 {
     "educationIsFree": "Education is free",
-    "Settings": "Settings",
-    "CustomizeChatUI": "Customize Chat UI",
-    "Language": "Language",
-    "Speed": "Speed voice",
-    "Logout": "Logout",
+    "settings": "Settings",
+    "customizechatUI": "Customize Chat UI",
+    "language": "Language",
+    "speed": "Speed voice",
+    "logout": "Logout",
     "dark": "Dark",
     "light": "Light",
     "system": "System",
