--- a/src/assets/languages/vi.json
+++ b/src/assets/languages/vi.json
@@ -1,10 +1,10 @@
 {
     "educationIsFree" : "Giáo dục cho tất cả",
-    "CustomizeChatUI":"Tùy chỉnh giao diện người dùng",
-    "Language":"Ngôn ngữ",
-    "Logout":"Đăng xuất",
-    "Settings":"Cài đặt",
-    "Speedvoice":"Tốc độ",
+    "customizechatUI":"Tùy chỉnh giao diện người dùng",
+    "language":"Ngôn ngữ",
+    "logout":"Đăng xuất",
+    "settings":"Cài đặt",
+    "speed":"Tốc độ",
     "dark":"Tối",
     "light":"Sáng",
     "system":"Hệ thống",
