--- a/src/assets/languages/vi.json
+++ b/src/assets/languages/vi.json
@@ -8,6 +8,8 @@
     "dark":"Tối",
     "light":"Sáng",
     "system":"Hệ thống",
+    "signInWithGoogle": "Đăng nhập bằng google",
+    "learnEnglishSmarter":"Học Tiếng Anh Thông Minh Hơn Cùng AI Gia Sư AI Cá Nhân Của Bạn!",
     "":""
     
 }
