--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -10,5 +10,5 @@
     "educationIsFree": "Education is free",
     "signInWithGoogle": "Sign in with Google",
     "learnEnglishSmarter": "Learn English Smarter with AI – Your Personal AI Teacher!",
-    "":""
+    "back": "Back"
 }
