refactor setting and update I18NProvider

--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -1,6 +1,6 @@
 {
     "settings": "Settings",
-    "customizechatUI": "Customize Chat UI",
+    "customizechatui": "Customize Chat UI",
     "language": "Language",
     "speed": "Speed voice",
     "logout": "Logout",
