--- a/src/assets/languages/vi.json
+++ b/src/assets/languages/vi.json
@@ -1,6 +1,6 @@
 {
     "educationIsFree" : "Giáo dục cho tất cả",
-    "customizechatUI":"Tùy chỉnh giao diện người dùng",
+    "customizechatui":"Tùy chỉnh giao diện người dùng",
     "language":"Ngôn ngữ",
     "logout":"Đăng xuất",
     "settings":"Cài đặt",
