--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -12,5 +12,6 @@
     "learnEnglishSmarter": "Learn English Smarter with AI – Your Personal AI Teacher!",
     "back": "Back",
     "notThings": "Not things",
-    "newChat": "New Chat"
+    "newChat": "New Chat",
+    "explain": "Explain"
 }
