--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -13,5 +13,6 @@
     "back": "Back",
     "notThings": "Not things",
     "newChat": "New Chat",
-    "explain": "Explain"
+    "explain": "Explain",
+    "seeall":"Show All"
 }
