fix(screen): update screen podcast

--- a/src/assets/languages/en.json
+++ b/src/assets/languages/en.json
@@ -14,5 +14,6 @@
     "notThings": "Not things",
     "newChat": "New Chat",
     "explain": "Explain",
-    "dowloadFail": "Dowloading Error"
+    "dowloadFail": "Dowloading Error",
+    "seeall":"See all"
 }
