--- a/src/assets/languages/vi.json
+++ b/src/assets/languages/vi.json
@@ -10,5 +10,6 @@
     "system": "Hệ thống",
     "signInWithGoogle": "Đăng nhập bằng google",
     "learnEnglishSmarter": "Học Tiếng Anh Thông Minh Hơn Cùng AI Gia Sư AI Cá Nhân Của Bạn!",
-    "": ""
+    "seeall":"Hiển thị tất cả",
+    "":""
 }
